# paraphrase

./: Differences.md  LICENSE  ReadMe.md  TODO.md  notes.txt  paraphrase.cabal  polyparse-next.cabal
benchmarks/: CompareParsers.hs  CopyAttoparsec.hs  CopyAttoparsecState.hs
src/Text/: Paraphrase.hs  PolyParse.hs
src/Text/Paraphrase/: Additional.hs  Chaining.hs  Debug.hs  Errors.hs  Inputs.hs  Pretty.hs  Stack.hs  TextManipulation.hs  Types.hs  Wrappers.hs
src/Text/Paraphrase/Examples/: XML.hs
src/Text/PolyParse/: TextManipulation.hs  Types.hs
