name:                paraphrase
version:             0.0.0.0
synopsis:            Parametrised parsing library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:       Text.Paraphrase

  other-modules:         Text.Paraphrase.Additional
                       , Text.Paraphrase.Errors
                       , Text.Paraphrase.Inputs
                       , Text.Paraphrase.Types
  -- other-extensions:
  build-depends:         base >=4.6 && <4.7
                       , deepseq
                       , bytestring
                       , text >= 0.11.3.1

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -O2 -Wall

  ghc-prof-options:    -auto-all -caf-all -rtsopts
