name:                paraphrase
version:             0.0.0.0
synopsis:            Parametrised parsing library
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:       Text.Paraphrase
                       , Text.Paraphrase.Debug
                       , Text.Paraphrase.Inputs

                       , Text.Paraphrase.Examples.XML

  other-modules:         Text.Paraphrase.Additional
                       , Text.Paraphrase.Errors
                       , Text.Paraphrase.Pretty
                       , Text.Paraphrase.Stack
                       , Text.Paraphrase.Types
                       , Text.Paraphrase.Wrappers

  build-depends:         base >=4.7 && <4.8
                       , deepseq
                       , bytestring
                       , text >= 0.11.3.1
                       , IsNull >= 0.4.0.0
                       , pretty
                       , dlist

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -O2 -Wall

  ghc-prof-options:    -auto-all -caf-all -rtsopts

benchmark compare-parsers
  default-language:    Haskell2010

  type:                exitcode-stdio-1.0

  build-depends:         base
                       , deepseq
                       , bytestring
                       , text
                       , criterion >= 0.5 && < 0.9

                       , paraphrase
                       , attoparsec

  hs-source-dirs:      benchmarks

  main-is:             CompareParsers.hs

  other-modules:         CopyAttoparsec
                       , CopyAttoparsecState

  ghc-options:         -O -Wall

  ghc-prof-options:    -auto-all -caf-all -rtsopts
